<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="248dp"
        android:layout_height="35dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="223dp"
        android:backgroundTint="#CE1D1B1B"
        android:indeterminate="false"
        android:indeterminateTint="#E73737"
        android:max="100"
        android:progressTint="#E20B0B"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sauce"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="165dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/base" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="279dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/toppings"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="415dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheese"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="319dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mozz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="43dp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="352dp" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ched"
        tools:layout_editor_absoluteX="266dp"
        tools:layout_editor_absoluteY="352dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/header"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heavy"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="281dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pproni"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="467dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mush"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="515dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pprs"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="560dp" />

    <RadioGroup
        android:id="@+id/pepperoni"
        android:layout_width="263dp"
        android:layout_height="31dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="467dp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="88dp"
            android:layout_height="34dp"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="@string/regular" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/extra" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/mushrooms"
        android:layout_width="263dp"
        android:layout_height="31dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="516dp" >

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="91dp"
            android:layout_height="30dp"
            android:text="@string/regular" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/extra" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/peppers"
        android:layout_width="266dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="560dp">

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="87dp"
            android:layout_height="33dp"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="92dp"
            android:layout_height="34dp"
            android:text="@string/regular" />

        <RadioButton
            android:id="@+id/radioButton13"
            android:layout_width="74dp"
            android:layout_height="36dp"
            android:text="@string/extra" />
    </RadioGroup>

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sliceToggle"
        android:textOff="No"
        android:textOn="Yes"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="637dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slices"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="619dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="42dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/neutral"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="207dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="42dp"
        android:layout_height="48dp"
        android:layout_marginEnd="264dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/neutral"
        tools:layout_editor_absoluteY="298dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="42dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/neutral"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="406dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="46dp"
        android:layout_height="43dp"
        app:srcCompat="@drawable/happy"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="608dp" />

</androidx.constraintlayout.widget.ConstraintLayout>